Added chats to local storage, rendered to the ui, handle textbox empty string validation

--- a/src/components/chat/styles.css
+++ b/src/components/chat/styles.css
@@ -28,3 +28,13 @@
 .send-btn:hover{
     transform: scale(0.97);
 }
+
+
+.message-card{
+    display: block;
+    box-shadow: 1px 1px 10px #ddd;
+    padding: 10px;
+    margin-bottom: 8px;
+    width: 30%;
+    background-color: #fff;
+}
