--- a/src/components/chat/styles.css
+++ b/src/components/chat/styles.css
@@ -31,8 +31,10 @@
 
 
 .message-card{
-    display: block;
-    box-shadow: 1px 1px 10px #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     padding: 10px;
     margin-bottom: 8px;
     width: 30%;
